src/games/love-calculator/stylesheet.css
*,
*::before,
*::after
{
    box-sizing: border-box;
}

html,
body
{
    font-family: "Comic Neue", cursive;
    font-size: 1.2rem;
    background-color: #ffffff;
}

body
{
    max-width: 900px;
    margin: 2rem auto;
    padding: 1rem;
}

img
{
    max-width: 100%;
    height: 100%;
}

.logo
{
    max-width: min( 80%, 300px );
    margin-left: auto;
    margin-right: auto;
}

.logo img
{
    image-rendering: pixelated;
}

h1
{
    letter-spacing: 0.03em;
    text-align: center;
}

form,
#result,
#shareUrl,
#nojs
{
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding: 1rem;
    background-color: #ffddf9;
    border: 3px solid #ff9ced;
    border-radius: 1rem;
    width: max-content;
    max-width: 100%;
}

form input[ type = 'text' ]
{
    padding: 0.5rem;
}

form input[ type = 'text' ],
form button
{
    font-size: 1.2em;
}

form button
{
    padding: 0.4em 0.8em;
    cursor: pointer;
    background-color: #ff9ced;
    border: 1px solid #ff9ced;
    border-radius: 1rem;
}

form button:hover
{
    box-shadow: 0px 0px 5px #888;
}

#result .text
{
    font-size: 1.4em;
    font-weight: 600;
}

#result,
#shareUrl
{
    display: none;
}

#shareUrl code
{
    font-family: monospace;
    border: 1px solid #ccc;
    background-color: #fff;
}

#calculator
{
    display: none;
}

